--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     <div class="row">
         <div class="col">
             <h1>Insert hotel information</h1>
+            <h4>This page does nothing</h4>
         </div>
     </div>
 
